@@ -591,6 +591,9 @@ fi
 rm $JOBFILE > /dev/null 2>&1
 
 
+sleep 1
+rm ~/.xbmc/userdata/addon_data/script-video-ripper/progress/* > /dev/null 2>&1
+
 echo
 echo ----------------------- script rc=0 -----------------------------
 echo -----------------------------------------------------------------
