@@ -162,6 +162,8 @@ done
 
 rm $JOBFILE > /dev/null 2>&1
 
+sleep 1
+rm ~/.xbmc/userdata/addon_data/script-video-ripper/progress/* > /dev/null 2>&1
 
 echo
 echo ----------------------- script rc=0 -----------------------------
